# horse-race-results

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py  scrapapi.py  scrape.py
tests/: __init__.py  test_main.py
tests/integration/: __init__.py  test_scraper_integration.py
tests/unit/: __init__.py  test_main.py
