[project]
name = "horse-race-results"
version = "0.1.0"
description = "Python project to scrape horse racing results"
authors = []
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]